--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation files('libs/poishadow-all.jar')
     implementation project(':RobotActivityLibrary')
     api files('../ZenboSDK/ZenboSDK.jar')
 }
